# ALQAC

./: .gitignore  README.md  evaluate.py  finetuning_embedding.ipynb  gen_data.ipynb  hello.py  indexing.ipynb  majority_vote.ipynb  preprocessing.ipynb  prompts_TOT.json  pyproject.toml  reranker.ipynb  task2_baseline copy.ipynb  task2_baseline.ipynb  task2_extend_refine.ipynb  task2_refine.ipynb  technical_report.md  utils.py
evaluation/: detailed_metrics_1_20.json  detailed_metrics_2_12.json  detailed_metrics_2_20.json  detailed_metrics_3_20.json
evaluation2/: detailed_metrics_2_12.json
evaluation3/: detailed_metrics_2_12.json
evaluation_task2/: result_task_2_BloomVN-8B-chat.json  result_task_2_DeepSeek-R1-Distill-Llama-8B.json  result_task_2_Llama-3.1-8B-Instruct.json  result_task_2_baseline.json  result_task_2_gemma-9b-it.json  result_task_2_llama-3.1-8b-instant
law_search/: __init__.py  vector_db.py
llm-fpt/: FPT_API MODEL.txt  FPT_API.ipynb
llm_fpt/: FPT_API MODEL.txt  llm.py
output/: Bộ luật dân sự.json  Hiến pháp.json  Luật An ninh mạng.json  Luật Bảo vệ môi trường.json  Luật Bảo vệ quyền lợi người tiêu dùng.json  Luật Chăn nuôi.json  Luật Căn cước.json  Luật Cư trú.json  Luật Du lịch.json  Luật Giao dịch điện tử.json  Luật Giá.json  Luật Giáo dục.json  Luật Hôn nhân và gia đình.json  Luật Khám bệnh, chữa bệnh.json  Luật Nhà ở.json  Luật Phòng, chống ma túy.json  Luật Phòng, chống tác hại của rượu, bia.json  Luật Thanh niên.json  Luật Tiếp cận thông tin.json  Luật Trọng tài thương mại.json  Luật Trồng trọt.json  Luật Tài nguyên nước.json  (+6 more)
(+7 files in other folders)
